@@ -7,7 +7,7 @@
 <para>
 The shuttleVFD drivers works with Shuttle Computer Group VFDs. These VFDs are
 found on various Shuttle XPC models. A partial list include Shuttle M1000,
-Shuttle M2000, and Shuttle G5 3300m.
+Shuttle M2000, Shuttle G5 3300m and Shuttle SG33G5M.
 </para>
 
 <para>
